apps/vicegerent/mcps/gitlab/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab
  namespace: kmcp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: agentgateway-system
            gateway.networking.k8s.io/gateway-name: agentgateway-proxy
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: registry.npmjs.org
        - matchName: gitlab.hahomelabs.com
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
